<resources>
    <string name="app_name">Media Player</string>
    <string name="ip">192.168.43.75</string>
    <string name="ip_name">IP</string>
    <string name="portz">8765</string>
    <string name="port_name">Port</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="connect">Connect</string>
       <string name="please">Please turn on MediaPlayer</string>
    <string name="cancel">Cancel</string>

</resources>
