<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ipboxlabel"
            android:labelFor="@id/ipbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/ip_name" />

        <EditText
            android:id="@+id/ipbox"
            android:layout_width="160dp"
            android:labelFor="@id/ipbox"
            android:layout_height="40dp"
            android:layout_margin="20pt"
            android:text="@string/ip"
            android:inputType="number"
            android:digits="0123456789."
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/portboxlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:labelFor="@id/portbox"
            android:text="@string/port_name" />

        <EditText
            android:id="@+id/portbox"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_margin="20pt"
            android:inputType="number"
            android:text="@string/portz"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:onClick="doCancel"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="doApply"
            android:text="@string/apply"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</LinearLayout>